@@ -105,6 +105,7 @@ have_func("localtime_r")
 have_header("intern.h")
 have_header("util.h")
 # ruby 1.9 headers
+have_header("ruby/util.h")
 have_type('rb_encoding', ['ruby/ruby.h', 'ruby/encoding.h'])
 
 # $! in C API
